# serialport-rs

./: .gitignore  .gitlab-ci.yml  .gitmodules  .lycheeignore  .travis.yml  CHANGELOG.asciidoc  CHANGELOG.md  Cargo.toml  LICENSE.txt  NOTES.md  README.asciidoc  README.md  TESTING.md  appveyor.yml  deny.toml  test_notes.md
.cargo/: config.toml
.github/workflows/: build.yaml  ci.yaml  lint.yaml
doc/: dev_notes.md  index.md  platforms.md
examples/: async_smol.rs  async_tokio.rs  clear_input_buffer.rs  clear_output_buffer.rs  duplex.rs  embedded_hal.rs  hardware_check.rs  heartbeat.rs  list_ports.rs  listener.rs  loopback.rs  pseudo_terminal.rs  receive_data.rs  reception_raw_blocking.rs  reception_raw_non_blocking.rs  transmit.rs
src/: async_core.rs  embedded.rs  lib.rs  posix.rs  wasm.rs  windows.rs
src/posix/: asynchronous.rs  enumerate.rs  error.rs  flock.rs  ioctl.rs  mod.rs  poll.rs  serialportext.rs  termios.rs  tty.rs
src/posix/asynchronous/: async_io.rs  mod.rs  tokio.rs
src/posix/enumerate/: apple.rs  freebsd.rs  linux_libudev.rs  linux_sysfs.rs  mod.rs  unimplemented.rs
src/sys/: mod.rs  unsupported.rs
src/sys/posix/: enumerate.rs  error.rs  mod.rs  poll.rs  termios.rs  tty.rs
src/sys/windows/: com.rs  dcb.rs  event_cache.rs  mod.rs
src/tests/: mod.rs  parse.rs  timeout.rs
src/windows/: com.rs  dcb.rs  enumerate.rs  error.rs  ffi.rs  mod.rs
src/windows/asynchronous/: async_io.rs  mod.rs
src/windows/enumerate/: iocontrol.rs
src/windows/listener/: event.rs  guid.rs  mod.rs  wide.rs  wm.rs
tests/: config.rs  test_baudrate.rs  test_buffer_size.rs  test_file_locking.rs  test_serialport.rs  test_timeout.rs  test_try_clone.rs  test_tty.rs
