[package]
name = "serialport"
version = "4.8.2-alpha.0"
authors = [
    "Bryant Mairs <bryant@mai.rs>",
    "Jesse Braham <jesse@beta7.io>",
]
edition = "2021"
rust-version = "1.59.0"
description = "A cross-platform low-level serial port library."
documentation = "https://docs.rs/serialport"
repository = "https://github.com/serialport/serialport-rs"
license = "MPL-2.0"
keywords = ["serial", "hardware", "system", "RS232"]
categories = ["hardware-support"]

[target."cfg(unix)".dependencies]
bitflags = "2.4.0"
nix = { version = "0.26", default-features = false, features = ["fs", "ioctl", "poll", "signal", "term"] }

[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
libudev = { version = "0.3.0", optional = true }
unescaper = "0.1.3"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
# TODO: Remove pinning this dependency when we are bumping our MSRV.
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.4"
io-kit-sys = "0.4.0"
mach2 = "0.4.1"

[target."cfg(windows)".dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Devices_Communication",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_Debug",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
]

[dependencies]
cfg-if = "1.0.0"
scopeguard = "1.1"
serde = { version = "1.0", features = ["derive"], optional = true }

# TODO: Remove pinning this subdependency when we are bumping our MSRV.
quote = ">=1, <=1.0.40"

[dev-dependencies]
assert_hex = "0.4.1"
clap = { version = "3.1.6", features = ["derive"] }
envconfig = "0.10.0"
# TODES Remove pinning this subdependency (of clap) when we are bumping our
# MSRV (libc raised its MSRV with a patch release 0.2.167 from 1.19.0 to
# 1.63.0). Trick the resolver into picking a compatible release of libc by
# adding it as a direct dependency meanwhile.
libc = ">=0.2.0, <=0.2.163"
# TODO: Remove pinning this subdependency of clap when we are bumping our MSRV.
# (There has been an incompatible change with the MSRV of os_str_bytes with
# 6.6.0) Until then we are tricking the dependency resolver into using a
# compatible version by adding it as a direct dependency here.
os_str_bytes = ">=6.0, <6.6.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rstest = { version = "0.12.0", default-features = false }
rstest_reuse = "0.6.0"
rustversion = "1.0.16"

[features]
default = ["libudev"]
hardware-tests = []
# TODO: Make the feature unconditionally available with the next major release
# (5.0) and remove this feature gate.
usbportinfo-interface = []
