[package]
name = "serialport"
version = "5.0.0-alpha.0"
authors = [
    "Bryant Mairs <bryant@mai.rs>",
    "Jesse Braham <jesse@beta7.io>",
]
edition = "2021"
rust-version = "1.75.0"
description = "A cross-platform low-level serial port library."
documentation = "https://docs.rs/serialport"
repository = "https://github.com/serialport/serialport-rs"
license = "MPL-2.0"
keywords = ["serial", "hardware", "system", "RS232"]
categories = ["hardware-support"]

[target."cfg(unix)".dependencies]
bitflags = "2.4.0"
nix = { version = "0.26", default-features = false, features = ["fs", "ioctl", "poll", "signal", "term"] }

[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
libudev = { version = "0.3.0", optional = true }
unescaper = "0.1.3"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
core-foundation = "0.10.0"
core-foundation-sys = "0.8.4"
io-kit-sys = "0.4.0"
mach2 = "0.4.1"

[target."cfg(windows)".dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_Devices_Communication",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_Debug",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
]

[dependencies]
cfg-if = "1.0.0"
scopeguard = "1.1"
serde = { version = "1.0", features = ["derive"], optional = true }
schemars = { package = "schemars", version = "1.2.1", features = ["derive"], optional = true }

[dev-dependencies]
assert_hex = "0.4.1"
clap = { version = "3.1.6", features = ["derive"] }
envconfig = "0.10.0"
libc = "0.2.163"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rstest = { version = "0.12.0", default-features = false }
rstest_reuse = "0.6.0"
rustversion = "1.0.16"

[features]
default = ["libudev"]
hardware-tests = []
