[package]
name = "serialport"
version = "4.9.1-alpha0"
authors = [
    "Bryant Mairs <bryant@mai.rs>",
    "Jesse Braham <jesse@beta7.io>",
]
edition = "2021"
rust-version = "1.71.0"
description = "A cross-platform low-level serial port library."
documentation = "https://docs.rs/serialport"
repository = "https://github.com/serialport/serialport-rs"
license = "MPL-2.0"
keywords = ["serial", "hardware", "system", "RS232"]
categories = ["hardware-support"]

[target."cfg(unix)".dependencies]
async-io = { version = "2.6.0", optional = true }
bitflags = "2.4.0"
blocking = { version = "1.6.2", optional = true }
nix = { version = "0.26", default-features = false, features = ["fs", "ioctl", "poll", "signal", "term"] }

[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
libudev = { version = "0.3.0", optional = true }
unescaper = "0.1.3"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
core-foundation = "0.10.0"
core-foundation-sys = "0.8.4"
io-kit-sys = "0.4.0"
mach2 = "0.4.1"

[target."cfg(windows)".dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Devices_Communication",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_Debug",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
]

[dependencies]
cfg-if = "1.0.0"
futures-io = { version = "0.3.31", optional = true }
scopeguard = "1.1"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
assert_hex = "0.4.1"
clap = { version = "3.1.6", features = ["derive"] }
envconfig = "0.10.0"
futures = "0.3"
libc = "0.2.163"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rstest = { version = "0.12.0", default-features = false }
rstest_reuse = "0.6.0"
rustversion = "1.0.16"
smol = "2"
smol-macros = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["libudev"]
async-io = ["dep:futures-io", "dep:async-io", "dep:blocking"]
tokio = ["dep:futures-io"]
hardware-tests = []
# TODO: Make the feature unconditionally available with the next major release
# (5.0) and remove this feature gate.
usbportinfo-interface = []
